# CodigoFutura

./: README.md
Clase1-Intro/: apunte.md
Clase2-Stellar/: README.md  package-lock.json
Clase2-Stellar/javascript-sdk/: consultar-balance.js  crear-cuenta.js  enviar-pago.js  package.json
Clase3-Intro-Rust/: README.md
Clase4-Rust-Avanz/: README.md
Clase4-Rust-Avanz/proyectos-soroban/hello-tiburona/: .gitignore
Clase4-Rust-Avanz/proyectos-soroban/hello-tiburona/contracts/hello-tiburona/: Cargo.toml  README.md
Clase4-Rust-Avanz/proyectos-soroban/hello-tiburona/contracts/hello-tiburona/src/: lib.rs  test.rs
Clase4-Rust-Avanz/proyectos-soroban/hello-tiburona/contracts/hello-tiburona/test_snapshots/test/: test_reset_solo_admin.1.json
Clase4-Rust-Avanz/proyectos-soroban/hello-tiburona/contracts/hello-tiburona/tests/: test.rs
Clase5-Creacion-Token/: README.md
Clase5-Creacion-Token/token_codebit/: tarpaulin-report.html  token_codebit_guide.md
Clase5-Creacion-Token/token_codebit/docs/: devpoints_deploy_guide.md  token_codebit_guide.md
Clase5-Creacion-Token/token_codebit/src/: lib.rs  storage.rs  test.rs
Clase6-Integrando-Wallet-Scaffold/: README.md
Clase6-Integrando-Wallet-Scaffold/mi-token-codebit/: package-lock.json  package.json
Clase6-Integrando-Wallet-Scaffold/mi-token-codebit/contracts/codebit/: Cargo.toml
Clase6-Integrando-Wallet-Scaffold/mi-token-codebit/contracts/codebit/src/: lib.rs
Clase6-Integrando-Wallet-Scaffold/token_codebit/: .gitignore  README.md  check_balances.sh  deploy_devpoints.sh
(+33 files in other folders)
