[package]
name = "token_codebit"
version = "0.1.0"
edition = "2024"
authors = ["DevPoints Community"]
description = "CODEBIT - Token for valuing developer time and contributions"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "23.0.2"

[dev-dependencies]
soroban-sdk = { version = "23.0.2", features = ["testutils"] }

[profile.release]
opt-level = "z"             
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true