[package]
name = "hello-tiburona"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true, features = ["alloc"] }   # ✅ importante 
wee_alloc = "0.4"

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }  # ✅ importante

